--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.11"
 dependencies = [
     "openai-whisper (>=20250625,<20250626)",
     "demucs (>=4.0.1,<5.0.0)",
-    "mutagen (>=1.47.0,<2.0.0)"
+    "mutagen (>=1.47.0,<2.0.0)",
+    "diffq (>=0.2.4,<0.3.0)"
 ]
 
 
